--- a/profile.html
+++ b/profile.html
@@ -53,6 +53,10 @@
                 <div class="feed">
                     <h2 class="feed-title">Tweets</h2>
                     <div class="decor"></div>
+                    <div class="container__inner">
+                        <div class="retweet">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
