--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
 
     <div id="overlay"></div>
 
+    <!-- Pop Up window for comment -->
+    <div class="comment">
+        <div class="comment-header">
+            <div class="comment-title">Leave your comment here: </div>
+            <div class="close-button">&times;</div>
+        </div>
+        <div class="comment-body">
+            <input class="comment-input" type="text">
+            <a class="modal-save" href="#"><img class="modal-icon" src="./img/icons/tweet.svg" alt=""></a>
+        </div>
+    </div>
+    <div id="overlay"></div>
+
 
 
 <script src="./js/main.js"></script>
