--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>Welcome to Tweet Tweet</h1>
                 <nav class="header-nav">
                     <ul class="nav-list">
-                        <li class="nav-item"> <a href="#">Home</a></li>
+                        <li class="nav-item"> <a href="index.html">Home</a></li>
                         <li class="nav-item"><a href="profile.html">Profile</a></li>
                     </ul>
                 </nav>
